# mpc_waypoint_tracking_controller

./: CMakeLists.txt  LICENSE  README.md  bgp_plugin.xml  package.xml
cfg/: MPCWayPointTrackerROS.cfg
include/mpc_waypoint_tracking_controller/: mpc_waypoint_tracking_controller.h  mpc_waypoint_tracking_controller_ros.h
params/: mpc_waypoint_tracker_ros_params.yaml
params/move_base/: costmap_common_params.yaml  local_costmap_params.yaml
src/: mpc_waypoint_tracking_controller.cpp  mpc_waypoint_tracking_controller_ros.cpp
